[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
lambda-flows = "0.4"
flowsnet-platform-sdk = "0.1"
tokio_wasi = { version = "1.25.1", features = ["full"] }
serde_json = "1.0"
log = "0.4"
anyhow = "1"
image = "0.24.6"
num-complex = "0.4.3"